# unicodetranslator

./: manage.py  pyproject.toml
base/: utils.py  views.py
unicodetranslator/: asgi.py  settings.py  urls.py  wsgi.py
